# Cataract-LMM

./: .editorconfig  .gitignore  CI_CD_STATUS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  DOCKER_TROUBLESHOOTING.md  LICENSE  README.md  test-docker-build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
codes/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bandit-final.json  bandit-results-updated.json  bandit-results.sarif  docker-compose.yml  final_validation.py  mypy.ini  pip-audit-results.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_test.py  test_container.py  test_phase3_optimized.py  test_phase3_validation.py  validate_cicd_fixes.py  validate_framework.py  validation_results.json
codes/.github/workflows/: ci.yml
codes/docker/: README.md  __init__.py  healthcheck.py
codes/docs/: README.md  conf.py  index.md  index_new.rst
codes/docs/_static/: README.md  custom.css
codes/docs/tutorials/: README.md  python_annotations_tutorial.ipynb  security_scanning_demo.ipynb
codes/reports/: README.md  flake8_report.txt
codes/surgical-instance-segmentation/: README.md  __init__.py  setup.py
codes/surgical-instance-segmentation/configs/: README.md  __init__.py  dataset_config.yaml  model_configs.yaml  task_definitions.yaml
codes/surgical-instance-segmentation/data/: README.md  __init__.py  augmentation.py  dataset_utils.py  preprocessing.py  validation.py
codes/surgical-instance-segmentation/evaluation/: README.md  __init__.py
codes/surgical-instance-segmentation/inference/: README.md  __init__.py  real_time_engine.py
codes/surgical-instance-segmentation/models/: README.md  __init__.py  model_factory.py
codes/surgical-instance-segmentation/models/mask_rcnn/: README.md  __init__.py  model.py  predictor.py
codes/surgical-instance-segmentation/models/sam/: README.md  __init__.py  model.py  predictor.py
codes/surgical-instance-segmentation/notebooks/: README.md  mask_rcnn_training.ipynb  sam_inference.ipynb  yolov11_segmentation_training.ipynb  yolov8_segmentation_training.ipynb
codes/surgical-instance-segmentation/tests/: README.md  __init__.py  test_framework_validation.py  test_performance.py
codes/surgical-instance-segmentation/training/: README.md  __init__.py  base_trainer.py  mask_rcnn_trainer.py  sam_trainer.py  training_manager.py  yolo_trainer.py
codes/surgical-instance-segmentation/utils/: README.md  __init__.py  config_manager.py
codes/surgical-phase-recognition/: README.md  __init__.py  setup.py  transform.py
codes/surgical-phase-recognition/analysis/: README.md  __init__.py  error_analyzer.py  model_analyzer.py
codes/surgical-phase-recognition/configs/: README.md  __init__.py  config_manager.py  default.yaml  fast_training.yaml  high_accuracy.yaml  tecno.yaml
codes/surgical-phase-recognition/data/: README.md  __init__.py  data_utils.py  datasets.py  sequential_dataset.py
codes/surgical-phase-recognition/models/: README.md  __init__.py  cnn_3d_models.py  cnn_rnn_hybrids.py  multistage_models.py  tecno.py  video_transformers.py
codes/surgical-phase-recognition/notebooks/: README.md  phase_validation_comprehensive.ipynb
codes/surgical-phase-recognition/preprocessing/: README.md  __init__.py  advanced_transforms.py  video_preprocessing.py
codes/surgical-phase-recognition/tests/: README.md  __init__.py  test_all_components.py  test_comprehensive_validation.py  test_performance.py
codes/surgical-phase-recognition/utils/: README.md  __init__.py  helpers.py
codes/surgical-phase-recognition/validation/: README.md  __init__.py  comprehensive_validator.py  training_framework.py
codes/surgical-skill-assessment/: .gitignore  README.md  __init__.py  main.py  main_simple.py  requirements.txt  setup.py
codes/surgical-skill-assessment/configs/: README.md  config.yaml  config_example.yaml
codes/surgical-skill-assessment/engine/: README.md  __init__.py  evaluator.py  predictor.py  trainer.py
codes/surgical-skill-assessment/models/: README.md  __init__.py  cnn_rnn.py  factory.py  transformers.py
codes/surgical-skill-assessment/notebooks/: README.md  video_classification_prototype.ipynb
codes/surgical-skill-assessment/tests/: README.md  __init__.py  conftest.py  test_data.py  test_engine.py  test_integration.py  test_models.py  test_utils.py
codes/surgical-skill-assessment/utils/: README.md  __init__.py  helpers.py
codes/surgical-video-processing/: README.md  REFACTORING_PLAN.md  __init__.py  clean_validation.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample.yaml  setup.py  validation_sample.yaml
codes/surgical-video-processing/compression/: README.md  __init__.py
codes/surgical-video-processing/configs/: README.md  __init__.py  default.yaml  high_quality.yaml  process_video_config.yaml  process_videos_config.yaml  quick_processing.yaml
codes/surgical-video-processing/core/: README.md  __init__.py  video_processor.py
codes/surgical-video-processing/deidentification/: README.md  __init__.py
codes/surgical-video-processing/legacy_scripts/: README.md  compress_video.sh  compress_videos.bat
codes/surgical-video-processing/metadata/: README.md  __init__.py
codes/surgical-video-processing/notebooks/: README.md  framework_demo.ipynb
codes/surgical-video-processing/pipelines/: README.md  __init__.py  orchestrator.py
codes/surgical-video-processing/preprocessing/: README.md  __init__.py
codes/surgical-video-processing/quality_control/: README.md  __init__.py
codes/surgical-video-processing/reference_scripts/: README.md  compress_video.ipynb  process_video.sh
codes/surgical-video-processing/scripts/: README.md  __init__.py
codes/surgical-video-processing/tests/: README.md  __init__.py
codes/surgical-video-processing/utils/: README.md  __init__.py  config_manager.py  file_utils.py  helpers.py  logging_config.py  performance_monitor.py
codes/tests/: README.md  conftest.py  conftest_extended.py  test_e2e.py  test_integration.py  test_main_framework.py  test_performance.py  test_security.py
(+51 files in other folders)
